<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/white_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="40dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:id="@+id/country_code"
                        android:text="+91"
                        android:enabled="false"
                        android:textSize="@dimen/edit_text_size"
                        android:background="@drawable/rounded_edit_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="20dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/mobile"
                        android:textSize="@dimen/edit_text_size"
                        android:inputType="number"
                        android:maxLength="10"
                        android:hint="@string/hint_text_edit_mobile"
                        android:textAlignment="center"
                        android:background="@drawable/rounded_edit_text"/>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/otp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:textSize="@dimen/edit_text_size"
                android:maxLength="6"
                android:hint="@string/hint_text_edit_otp"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/btn_otp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/btn_text_color"
                android:layout_marginTop="20dp"
                android:text="@string/btn_text_otp"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/btn_submit"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/btn_text_color"
                android:textSize="@dimen/btn_text_size"
                android:layout_marginTop="20dp"
                android:text="@string/btn_text_submit"
                android:background="@drawable/rounded_edit_text"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>